14_multi-cluster/14.2/dr-locality-distribution.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: advertisement-distribution
spec:
  host: advertisement.weather.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      localityLbSetting:
        enabled: true
        distribute:
        - from: cn-north-7/cn-north-7b/*
          to:
            "cn-north-7/cn-north-7b/nanjing": 10
            "cn-north-7/cn-north-7c/hangzhou": 80
            "cn-north-7/cn-north-7c/ningbo": 10
    connectionPool:
      http:
        maxRequestsPerConnection: 1
    outlierDetection:
      baseEjectionTime: 2m
      consecutive5xxErrors: 1
      interval: 1s
