14_multi-cluster/14.2/vs-advertisement.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: advertisement-route
spec:
  hosts:
  - advertisement
  http:
  - route:
    - destination:
        host: advertisement
        subset: v1
